tests/baselines/reference/thisTypeAccessibility.errors.txt
tests/cases/conformance/types/thisType/thisTypeAccessibility.ts(14,10): error TS2341: Property 'p' is private and only accessible within class 'MyClass'.
tests/cases/conformance/types/thisType/thisTypeAccessibility.ts(20,10): error TS2341: Property 'p' is private and only accessible within class 'MyClass'.
tests/cases/conformance/types/thisType/thisTypeAccessibility.ts(26,10): error TS2341: Property 'p' is private and only accessible within class 'MyClass'.


==== tests/cases/conformance/types/thisType/thisTypeAccessibility.ts (3 errors) ====
    class MyClass {
        private p: number = 123;
        protected pp: number = 123;
        public ppp: number = 123;
    }
    
    interface MyClass {
        extension1(p: number): void;
        extension2(p: number): void;
        extension3(p: number): void;
    }
    
    MyClass.prototype.extension1 = function (this: MyClass, p: number) { 
        this.p = p;
             ~
!!! error TS2341: Property 'p' is private and only accessible within class 'MyClass'.
        this.pp = p;
        this.ppp = p;
    }
    
    MyClass.prototype.extension2 = function<T extends MyClass> (this: T, p: number) { 
        this.p = p;
             ~
!!! error TS2341: Property 'p' is private and only accessible within class 'MyClass'.
        this.pp = p;
        this.ppp = p;
    }
    
    function extension3<T extends MyClass> (this: T, p: number) { 
        this.p = p;
             ~
!!! error TS2341: Property 'p' is private and only accessible within class 'MyClass'.
        this.pp = p;
        this.ppp = p;
    }
    
    MyClass.prototype.extension3 = extension3;
    